Bug 1412078 - Don't treat resampled layers as entirely opaque. r=mattwoodrow, a=ritu